Added a few Scenes and moved Temboo on top of the libraries loading path in order to avoid the duplicate org.JSON problem

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,11 +32,11 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.GS_Video.classpath}:\
+    ${libs.LibGDX_-_Awesomium_Bridge.classpath}:\
     ${libs.MT4J_Core.classpath}:\
     ${libs.MT4J_Desktop.classpath}:\
-    ${libs.GS_Video.classpath}:\
-    ${libs.PDF_Renderer.classpath}:\
-    ${libs.LibGDX_-_Awesomium_Bridge.classpath}
+    ${libs.PDF_Renderer.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
